@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Removed the long-time deprecated GMF exporter in XML format for event_based
   * Added a re-use hazard feature in event_based_risk in single-file mode
   * Made the event ID unique also in scenario calculations with
     multiple realizations
